--- a/linkers/rtld-trace-buffer.ini
+++ b/linkers/rtld-trace-buffer.ini
@@ -26,6 +26,8 @@ buffer-local = " uint8_t* in;"
 header = "#include <stdint.h>"
 header = "#include <rtems.h>"
 header = "#include <rtems/rtems/tasksimpl.h>"
+header = "#include <rtems/score/threadimpl.h>"
+header = "#include <rtems/score/threadq.h>"
 
 [trace-buffer-tracers]
 code = <<<CODE
@@ -84,8 +86,8 @@ static inline uint32_t __rtld_tbg_executing_id(void)
 static inline uint32_t __rtld_tbg_executing_status(void)
 {
   /* @fixme Add the current CPU for SMP. */
-  struct Thread_Control* tc = _Thread_Get_executing();
-  return (tc->current_priority << 8) | tc->real_priority;
+  Thread_Control* tc = _Thread_Get_executing();
+  return (_Thread_Get_priority(tc) << 8) | tc->Real_priority.priority;
 }
 
 static inline uint32_t __rtld_tbg_executing_state(void)
